# fad-trabalho-2

./: .gitignore  README.md  fad-gabriel_lins.ipynb  gnb_results.csv  installkernel.sh  knn_results.csv  pyproject.toml  results.csv
