[tool.poetry]
name = "trabalho2"
version = "0.1.0"
description = ""
authors = ["Gabriel Lins <gabrielinsmelo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.25.0"
pandas = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
